--- a/Lab 16/Lyrics/index.html
+++ b/Lab 16/Lyrics/index.html
@@ -19,7 +19,7 @@
 		const covers = document.querySelectorAll("img")
 
 		const proba = function() {
-			var xhttp = new XMLHttpRequest()
+			let xhttp = new XMLHttpRequest()
 			xhttp.onreadystatechange = function() {
 				if (this.readyState == 4 && this.status == 200) {
 					lyrics.innerText = this.responseText
