--- a/Lab 16/Jokes/index.html
+++ b/Lab 16/Jokes/index.html
@@ -12,15 +12,24 @@
 	<script>
 		const joke = document.querySelector("p")
 		const btn = document.querySelector("button")
+		let jokeAPI = 'http://api.icndb.com/jokes/random'
 
-		const generateJoke = function () {
-			console.log("asd")			
+		// joke 153 has bad quots?
+		// connection was not secure?
+
+		const generateJoke = function() {
+			let xhttp = new XMLHttpRequest()
+			xhttp.onreadystatechange = function() {
+				if (this.readyState == 4 && this.status == 200) {
+					joke.innerText = JSON.parse(this.responseText).value.joke
+				}
+			}
+			xhttp.open("GET", jokeAPI, true)
+			xhttp.send()
 		}
 
 		btn.addEventListener("click", generateJoke)
-		
 
-		
 	</script>
 </body>
 </html>
